--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -p tsconfig.build.json",
     "prepare": "husky install",
     "start": "node dist/server.js",
-    "migration:run": "prisma migrate deploy",
+    "migration:run": "npm run dev:load-envs prisma migrate deploy",
     "migration:generate": "npm run dev:load-envs prisma migrate dev",
     "lint": "eslint .",
     "lint:staged": "lint-staged",
@@ -75,6 +75,7 @@
     "@brazilian-utils/brazilian-utils": "^1.0.0-rc.12",
     "@prisma/client": "^3.14.0",
     "@types/axios": "^0.14.0",
+    "@types/redis": "^4.0.11",
     "axios": "^1.1.3",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
@@ -87,6 +88,7 @@
     "http-status": "^1.5.2",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
+    "redis": "^4.6.7",
     "reflect-metadata": "^0.1.13"
   }
 }
