--- a/package.json
+++ b/package.json
@@ -69,26 +69,29 @@
     "tsconfig-paths": "3.9.0",
     "ttypescript": "^1.5.13",
     "typescript": "^4.2.4",
-    "typescript-transform-paths": "2.2.3"
+    "typescript-transform-paths": "^2.2.3"
   },
   "dependencies": {
     "@brazilian-utils/brazilian-utils": "^1.0.0-rc.12",
     "@prisma/client": "^3.14.0",
     "@types/axios": "^0.14.0",
     "@types/redis": "^4.0.11",
-    "axios": "^1.1.3",
-    "bcrypt": "^5.0.1",
+    "@types/uuid": "^9.0.2",
+    "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dayjs": "^1.11.9",
-    "dotenv": "^16.0.1",
+    "dotenv": "^16.3.1",
     "dotenv-expand": "^8.0.3",
-    "express": "^4.18.1",
+    "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "http-status": "^1.5.2",
-    "joi": "^17.6.0",
+    "joi": "^17.9.2",
     "jsonwebtoken": "^8.5.1",
+    "pg": "^8.11.2",
     "redis": "^4.6.7",
-    "reflect-metadata": "^0.1.13"
+    "reflect-metadata": "^0.1.13",
+    "uuid": "^9.0.0"
   }
 }
